Fixed subtitle - display none instead of visibility hidden

--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -117,7 +117,7 @@ h1 .secondColor { color:#ABCC54; }
 h2 { font-size: 1.2em; }
 h3 { font-size: 1em; }
 
-.subtitle { visibility: hidden; }
+.subtitle { display: none; }
 
 /* Header LIs content */
 .logoWrapper { padding:8px; }
